# skills-project

./: .gitignore  README.md
bigdata/dws/huawei-cloud-dws-cpu-diag/: SKILL.md
bigdata/dws/huawei-cloud-dws-dymem-diag/: SKILL.md
bigdata/dws/huawei-cloud-dws-io-diag/: SKILL.md
bigdata/dws/huawei-cloud-dws-sql-check/: SKILL.md
computing/ecs/huawei-cloud-ecs-passwordless-login/: SKILL.md
computing/flexus-l/huawei-cloud-flexus-l-server-manage/scripts/: config.py  flexus_specs_extractor.py  pyproject.toml
computing/ops/e2e-test-skill/: SKILL.md
computing/ops/huawei-cloud-computing-query/: SKILL.md
devtools/cli/huawei-cloud-cli-guidance/: SKILL.md
devtools/common/huawei-cloud-find-skills/: SKILL.md
huawei-cloud-cli-guidance/references/: parameter-format.md  service-catalog.md
huawei-cloud-computing-query/scripts/: ensure_env.py
huawei-cloud-computing-query/scripts/as/: list_group_scheduled_tasks.py  list_scaling_activity_logs.py  list_scaling_groups.py  list_scaling_instances.py  list_warm_pool_instances.py
huawei-cloud-computing-query/scripts/bms/: list_bare_metal_servers_detail.py
huawei-cloud-computing-query/scripts/ecs/: list_cloud_servers.py  list_flavors.py  list_resize_flavors.py  list_servers_details_by_id.py
huawei-cloud-find-skills/: SKILL.md
huawei-cloud-find-skills/references/: skill-catalog.md
huawei-cloud-network-query/references/dns/: guide.md
huawei-cloud-network-query/references/eip/: guide.md
huawei-cloud-network-query/references/elb/: guide.md
huawei-cloud-network-query/scripts/: ensure_env.py
iam/iam-query/: SKILL.md
(+590 files in other folders)
